feat: F2/F3/F5 data-quality audit — injection-based dedup/late-drop/parity guards
- faketool: -inject-max-rounds cap (no post-teardown injection rounds)
- pipeline-lib: INJECT_MAX_ROUNDS plumbing
- holistic-measure: injection per phase, counter sampler, smoke inject
  gate, round cap 4 on main
- holistic-analyze: G7 audit (dedup/late-drop/counter-window-aware
  checks, full raw recount vs candles), audit-mode reader (sanitized
  fields — binary hash column broke line parsing), LATEST-startup-skip
  tolerance, G7_REUSE_RAW evidence-replay hook
- levers-map doc: status update (targets met, investigation closed)

Results: 1200/1200 injected dups caught, 120/120 late ticks dropped,
47104 window parity checks 0 mismatches, p95 720ms. Guards proven
against bug-injected evidence copy (all 3 tamper classes fired).